# swift-justhtml

./: .gitignore  .swiftformat  LICENSE  Package.resolved  Package.swift  README.md  TODO.md  TURBO_OPTIMIZATION_PLAN.md  claude.md  current_state.md  fuzzer.md  spec.md  test_output_before_refactor.txt
.github/workflows/: docs.yml  test.yml
Benchmarks/: BENCHMARK_RESULTS.md  Benchmark.swift  Fuzz.swift  MEMORY_RESULTS.md  OPTIMIZATION_HISTORY.md  PERFORMANCE_INVESTIGATION_REPORT.md  benchmark_js.mjs  benchmark_python.py  compare.py  generate_synthetic.py  memory_compare.py
Benchmarks/Sources/: main.swift
Benchmarks/rust_benchmark/: Cargo.toml
Benchmarks/rust_benchmark/src/: main.rs
Examples/: README.md
Examples/JustHTMLDemo.playground/: Contents.swift
Examples/extractlinks/: README.md  main.swift
Examples/fetchpage/: README.md  main.swift
Examples/html2md/: README.md  main.swift
Examples/htmltool/: README.md  main.swift
Sources/swift-justhtml/: ArenaNode.swift  Constants.swift  Encoding.swift  Entities.swift  EntitiesData.swift  HTMLStream.swift  JustHTML.swift  Node.swift  Selector.swift  Serialize.swift  (+4 more)
notes/: 01-PerformanceInvestigationPlan.md  02-PerformanceInvestigationReport.md  03-TurboOptimizationPlan.md  04-ProfilingReport.md  05-OptimizationHistory.md  06-PerformanceProfile.md  07-CodeReview.md  OPTIMIZATION_HISTORY.md  PERFORMANCE_INSIGHTS.md  PERFORMANCE_INVESTIGATION_PLAN.md  PERFORMANCE_PROFILE.md  PROFILING_REPORT.md  TURBO_OPTIMIZATION_PLAN.md  architecture.md  comparison.md  fuzzer.md  html5ever-architecture.md  spec.md
(+20 files in other folders)
